# connectlife-mcp-server

./: .gitignore  AGENTS.md  ARCH.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.claude/skills/bump-version/: SKILL.md
.claude/skills/propose-commit/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/venv-setup/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  security_vulnerability.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yaml  codeql.yaml  codeql.yml  publish-ghcr.yaml  publish-pypi.yaml
src/connectlife_mcp/: __init__.py  __main__.py  server.py  session.py
src/connectlife_mcp/tools/: __init__.py  auth.py  commands.py  devices.py
tests/: conftest.py  test_session.py  test_tools_auth.py  test_tools_commands.py  test_tools_devices.py
