[project]
name = "connectlife-mcp-server"
description = "Standalone MCP server for ConnectLife smart appliances"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "fastmcp>=3.2.0",
    "connectlife>=0.7.1",
]

[project.scripts]
connectlife-mcp = "connectlife_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connectlife_mcp"]

[tool.hatch.version]
path = "src/connectlife_mcp/__init__.py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "bandit>=1.8.0",
    "respx>=0.22.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --strict-config --cov=connectlife_mcp --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = ["D100", "D104", "D107", "D102"]  # module, __init__, init docstrings + public methods

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "E501", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

# Relaxed for third-party libraries without type stubs
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingTypeArgument = "warning"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used is fine in tests (they're excluded anyway)
